--- a/style/login.css
+++ b/style/login.css
@@ -109,18 +109,21 @@ h3 {
 
 /* Aside  */
 .menu-player {
-    display: grid;
-    grid-template-columns: 312px auto;
-    grid-gap: 30px;
+    /* display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .aside-menu {
-    height: 250px;
-    width: 312px;
+    /* height: 250px;
+    width: 312px; */
     background-color: black;
-    margin-top: 70px;
+    /* margin-top: 70px;
     margin-left: 10px;
-    border-radius: 5px;
+    border-radius: 5px; */
 
 }
 
@@ -243,10 +246,13 @@ small {
         grid-template-columns: repeat(1fr);
     }
 
+    body {
+        overflow-x: hidden;
+    }
 
     .header {
         width: 100%;
-        height: 540px;
+        height: 600px;
     }
 
     .header-info {
@@ -262,7 +268,17 @@ small {
 
     .header-caption h1 {
         color: #FFFFFF;
-        font-size: 30px;
+        font-size: 20px;
+
+    }
+
+    h3 {
+        font-size: 16px;
+    }
+
+    .header-caption h1 .header-titel {
+        color: #FFFFFF;
+        font-size: 25px;
 
     }
 
@@ -317,6 +333,10 @@ small {
         grid-template-columns: repeat(1fr);
     }
 
+    body {
+        overflow-x: hidden;
+    }
+
     .header {
         width: 100%;
         height: 350px;
@@ -328,6 +348,10 @@ small {
 
     }
 
+    h3 {
+        font-size: 16px;
+    }
+
     .header-caption {
         width: 205px;
         margin-left: 30px;
@@ -335,7 +359,13 @@ small {
 
     .header-caption h1 {
         color: #FFFFFF;
-        font-size: 30px;
+        font-size: 20px;
+
+    }
+
+    .header-caption h1 .header-titel {
+        color: #FFFFFF;
+        font-size: 25px;
 
     }
 
