--- a/style/style.css
+++ b/style/style.css
@@ -247,10 +247,13 @@ small {
         grid-template-columns: repeat(1fr);
     }
 
+    body {
+        overflow-x: hidden;
+    }
 
     .header {
         width: 100%;
-        height: 540px;
+        height: 600px;
     }
 
     .header-info {
@@ -266,7 +269,17 @@ small {
 
     .header-caption h1 {
         color: #FFFFFF;
-        font-size: 30px;
+        font-size: 20px;
+
+    }
+
+    h3 {
+        font-size: 16px;
+    }
+
+    .header-caption h1 .header-titel {
+        color: #FFFFFF;
+        font-size: 25px;
 
     }
 
@@ -321,6 +334,10 @@ small {
         grid-template-columns: repeat(1fr);
     }
 
+    body {
+        overflow-x: hidden;
+    }
+
     .header {
         width: 100%;
         height: 350px;
@@ -339,9 +356,20 @@ small {
 
     .header-caption h1 {
         color: #FFFFFF;
-        font-size: 30px;
+        font-size: 20px;
 
     }
+
+    h3 {
+        font-size: 16px;
+    }
+
+    .header-caption h1 .header-titel {
+        color: #FFFFFF;
+        font-size: 25px;
+
+    }
+
 
     .header-image img {
         width: 300px;
