--- a/style/upcoming.css
+++ b/style/upcoming.css
@@ -165,6 +165,7 @@ footer {
     background: #FFFFFF;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
     padding: 15px;
+    border-radius: 5px;
 }
 
 .player-image {
@@ -258,10 +259,13 @@ small {
         grid-template-columns: repeat(1fr);
     }
 
+    body {
+        overflow-x: hidden;
+    }
 
     .header {
         width: 100%;
-        height: 540px;
+        height: 600px;
     }
 
     .header-info {
@@ -277,7 +281,17 @@ small {
 
     .header-caption h1 {
         color: #FFFFFF;
-        font-size: 30px;
+        font-size: 20px;
+
+    }
+
+    h3 {
+        font-size: 16px;
+    }
+
+    .header-caption h1 .header-titel {
+        color: #FFFFFF;
+        font-size: 25px;
 
     }
 
@@ -332,6 +346,10 @@ small {
         grid-template-columns: repeat(1fr);
     }
 
+    body {
+        overflow-x: hidden;
+    }
+
     .header {
         width: 100%;
         height: 350px;
@@ -350,9 +368,21 @@ small {
 
     .header-caption h1 {
         color: #FFFFFF;
-        font-size: 30px;
+        font-size: 20px;
 
     }
+
+    h3 {
+        font-size: 16px;
+    }
+
+    .header-caption h1 .header-titel {
+
+        color: #FFFFFF;
+        font-size: 25px;
+
+    }
+
 
     .header-image img {
         width: 300px;
