--- a/style/login.css
+++ b/style/login.css
@@ -180,7 +180,7 @@ h3 {
     width: 100%;
     display: flex;
     flex-direction: column;
-
+    margin-left: 450px;
 }
 
 .form p input {
@@ -286,6 +286,13 @@ small {
         width: 300px;
         height: 200px;
         top: 80px;
+    }
+
+    .form {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin: 0;
     }
 
     .menu-player {
@@ -423,6 +430,13 @@ small {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         margin: auto;
+    }
+
+    .form {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin: 0;
     }
 
     .footer {
