--- a/style/login.css
+++ b/style/login.css
@@ -109,12 +109,10 @@ h3 {
 
 /* Aside  */
 .menu-player {
-    /* display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 30px; */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 30px;
+
 }
 
 .aside-menu {
@@ -130,7 +128,7 @@ h3 {
 .aside-menu ul {
     display: flex;
     align-items: center;
-    flex-direction: column;
+    /* flex-direction: column; */
     padding: 20px;
     justify-content: center;
 }
@@ -161,7 +159,7 @@ h3 {
 
 .players {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     grid-column-gap: 30px;
     grid-row-gap: 27px;
     margin-top: 70px;
@@ -299,6 +297,14 @@ small {
         grid-template-columns: repeat(1, 1fr);
     }
 
+    .aside-menu ul {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        padding: 20px;
+        justify-content: center;
+    }
+
     .players {
         display: flex;
         flex-direction: column;
@@ -428,7 +434,7 @@ small {
 
     .players {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
         margin: auto;
     }
 
@@ -445,16 +451,12 @@ small {
         justify-content: center;
         width: 100%;
         background-color: #000000;
+        margin: 0;
     }
 
-    footer {
-        background-color: #000000;
-        width: 100%;
-    }
 
-    small,
     .footer-icon {
-        margin: auto;
+        margin: 0px auto;
         text-align: center;
     }
 }
